--- a/KapyApp/KapyApp.csproj
+++ b/KapyApp/KapyApp.csproj
@@ -261,6 +261,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap_journal.css" />
+    <Content Include="Content\bootstrap_lumen.css" />
+    <Content Include="Content\bootstrap_readable.css" />
     <Content Include="Content\Images\kapy_logo.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -357,8 +359,8 @@
     <Content Include="Views\Comments\Edit.cshtml" />
     <Content Include="Views\Comments\Index.cshtml" />
     <Content Include="Views\Partial\CategoryDropList.cshtml" />
-    <Content Include="Views\Partial\_MenuView.cshtml" />
     <Content Include="Views\News1\Category.cshtml" />
+    <Content Include="Views\News1\_MenuView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
